further blacklist exensions

--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -11,6 +11,7 @@
 <li><a href=
 "https://www.facebook.com/dialog/share?app_id=180444840287&href=https%3A%2F%2Fwww.theguardian.com%2Fcommentisfree%2F2022%2Foct%2F10%2Fnobel-prize-neanderthal-svante-paabo-palaeogenetics%3FCMP%3Dshare_btn_fb">Facebook</a></li>
 <li><a href="https://plus.google.com/share?url=https%3A%2F%2Ficac.cat%2Fes%2Factualitat%2Fnoticies%2F2022%2Finvestigo2022%2F">Google Plus</a></li>
+<li><a href="https://pubads.g.doubleclick.net/gampad/jump?iu=/285/nature.com/article&sz=728x90&c=706632719&t=pos%3Dtop%26type%3Darticle%26artid%3Ds41586-022-05283-y%26doi%3D10.1038/s41586-022-05283-y%26techmeta%3D45%26subjmeta%3D181,182,19,208,2474,2811,457,477,631,649,689,706%26kwrd%3DAnthropology,Evolutionary+biology,Evolutionary+genetics,Genetic+variation,Human+behaviour">Google Matketing Platform</a></li>
 <li><a href="https://www.googletagmanager.com/ns.html?id=GTM-5G9JF7Z">Google Tag Manager</a></li>
 <li><a href="https://www.instagram.com/p/Bw4X_ool1a7/">Instagram</a></li>
 <li><a href="https://a.jimdo.com/app/auth/signin/jumpcms/?page=1038097951">Jimdo</a></li>
@@ -28,6 +29,7 @@
 <li><a href="https://accounts.login.idm.telekom.com/oauth2/auth?client_id=10LIVESAM30000004901PORTAL00000000000000&state=747bbb901e5ad0e7e5e4b62a7bb1834cd0a3fd230a8f948287cce11a3ec08a26&claims=%7B%22id_token%22%3A%7B%22urn%3Atelekom.com%3Aall%22%3Anull%7D%7D&nonce=747bbb901e5ad0e7e5e4b62a7bb1834cd0a3fd230a8f948287cce11a3ec08a26&redirect_uri=https%3A%2F%2Flogin.t-online.de%2Fcallback&logout_uri=https%3A%2F%2Flogin.t-online.de%2Ftelekom_logout&display=popup&scope=openid&response_type=code">Telekom</a></li>
 <li><a href="https://login.t-online.de/?returnToUrl=https://email.t-online.de?wdycf=www.t-online.de">T-Online</a></li>
 <li><a href="https://telegram.me/share/url?url=https%3A%2F%2Fwww.gesundheitlicheaufklaerung.de%2Ftdb_templates%2Fsingle-post-template-54-fitness-pro-2%2F&text=Single%20Post%20Template%2054%20%E2%80%93%20Fitness%20PRO%20edit">Telegram</a></li>
+<li><a href="https://t.me/share/url?url=https%3A%2F%2Fiapetus2.ac.uk%2Fstudentships%2Ftemporal-ecology-in-the-anthropocene%2F">Telegram</a></li>
 <li><a href="http://www.tumblr.com/share?v=3&u=https%3A%2F%2Fhauenstein.de%2Fort%2Fkarmelitinnenkloster-st-josef%2F&t=Karmelitinnenkloster+St.+Josef">Tumblr</a></li>
 <li><a href="https://twitter.com/intent/tweet?text=I%E2%80%99m%20not%20sure%20about%20the%20morality%0A1.%20-5%C3%82%C2%B0C%20won%E2%80%99t%20seem%20co...%20&url=https%3A%2F%2Fmilitaryland.net%2Fnews%2Fukrainian-winter-is-coming%2F%23comment-5777">Twitter</a></li>
 <li><a href="https://twitter.com/share?url=https%3A%2F%2Fwww.t-online.de%2Ffinanzen%2Fboerse%2Fticker%2Fpro-bahn-49-euro-ticket-schwerlich-sozial-und-oekologisch%2F0DAA9C0073DD4ABE%2F&text=Ich+habe+einen+spannenden+Artikel+gefunden.&via=tonline">Twitter</a></li>
