--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -3,8 +3,10 @@
 <style>a{text-decoration:none;color:blue}a::after{content: " " attr(href);font-family:monospace;color:black}</style>
 </head><body>
 <h2>Blacklist</h2>
+<!-- <li><a href=""></a></li> -->
 <ol>
 <li><a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fdubisthalle.de%2Fburger-king-sagt-vorwuerfe-von-team-wallraff-gegen-restaurant-in-halle-neustadt-nicht-bestaetigt&linkname=Burger%20King%20sagt%3A%20Vorw%C3%BCrfe%20von%20%E2%80%9CTeam%20Wallraff%E2%80%9D%20gegen%20Restaurant%20in%20Halle-Neustadt%20nicht%20best%C3%A4tigt">Add to any</a></li>
+<li><a href="https://askubuntu.com/users/login?ssrc=head&returnurl=https%3a%2f%2faskubuntu.com%2f">Ask Ubuntu</a></li>
 <li><a href="https://www.blogger.com/share-post.g?blogID=9054331497123611371&postID=6264829513138037009&target=email">Blogger</a></li>
 <li><a href="https://www.facebook.com/share.php?u=https%3A%2F%2Fwww.n-tv.de%2F23637423">Facebook</a></li>
 <li><a href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.behoerden-spiegel.de%2F2022%2F10%2F12%2Fsachstand-ersatz-heeresflugabwehr%2F">Facebook</a></li>
@@ -26,9 +28,12 @@
 <li><a href="https://pinterest.com/pin/create/link?url=https%3A%2F%2Fwww.t-online.de%2Fnachrichten%2Fukraine%2Fid_100066070%2Fmelnyk-reist-ab-er-tat-seinem-land-keinen-gefallen-.html&description=Ich+habe+einen+spannenden+Artikel+gefunden.">Pinterest</a></li>
 <li><a href="http://pinterest.com/pin/create/button/?url=https%3A%2F%2Fwww.yumpu.com%2Fde%2Fdocument%2Fview%2F63236194%2F2020-04-09-strafanzeige-statusfeststellung-offener-brief-zum-frieden-aktual&media=https%3A%2F%2Fwww.yumpu.com%2Fde%2Fimage%2Fpinterest%2F63236194&description=2020-04-09+Strafanzeige-Statusfeststellung+Offener+Brief+zum+Frieden+aktual.+-+Magazine+with+25+pages%3A+">Pinterest</a></li>
 <li><a href="https://getpocket.com/edit?url=https%3A%2F%2Fwww.tagesspiegel.de%2Fpolitik%2Fhabe-vermutet-da-ist-mehr-im-spiel-koch-mehrin-aussert-sich-zu-sexismus-vorfall-mit-kubicki-8747830.html&utm_source=tagesspiegel&utm_medium=pocket&utm_campaign=share&utm_content=8747830">Pocket</a></li>
+<li><a href="https://serverfault.com/users/login?ssrc=head&returnurl=https%3a%2f%2fserverfault.com%2fquestions%2f1114120%2foracle-19c-database-session-unstable-with-azure-load-balancer"></a>Server Fault</li>
+<li><a href="https://chess.stackexchange.com/users/login?ssrc=head&returnurl=https%3a%2f%2fchess.stackexchange.com%2f">Stack Exchange</a></li>
 <li><a href="https://stackoverflow.com/users/signup?ssrc=site_switcher&returnurl=https%3A%2F%2Fstackoverflow.com%2Fquestions%2F30171063%2Fhow-to-generate-a-postgresql-dump-from-a-docker-container">Stack Overflow</a></li>
 <li><a href="https://stackoverflow.com/users/login?ssrc=head&returnurl=https%3A%2F%2Fstackoverflow.com%2Fquestions%2F30171063%2Fhow-to-generate-a-postgresql-dump-from-a-docker-container">Stack Overflow</a></li>
 <li><a href="https://stackoverflow.com/teams/create/free?utm_source=so-owned&utm_medium=side-bar&utm_campaign=campaign-38&utm_content=cta">Stack Overflow</a></li>
+<li><a href="https://superuser.com/users/login?ssrc=head&returnurl=https%3a%2f%2fsuperuser.com%2f">Superuser</a></li>
 <li><a href="https://accounts.login.idm.telekom.com/oauth2/auth?client_id=10LIVESAM30000004901PORTAL00000000000000&state=747bbb901e5ad0e7e5e4b62a7bb1834cd0a3fd230a8f948287cce11a3ec08a26&claims=%7B%22id_token%22%3A%7B%22urn%3Atelekom.com%3Aall%22%3Anull%7D%7D&nonce=747bbb901e5ad0e7e5e4b62a7bb1834cd0a3fd230a8f948287cce11a3ec08a26&redirect_uri=https%3A%2F%2Flogin.t-online.de%2Fcallback&logout_uri=https%3A%2F%2Flogin.t-online.de%2Ftelekom_logout&display=popup&scope=openid&response_type=code">Telekom</a></li>
 <li><a href="https://login.t-online.de/?returnToUrl=https://email.t-online.de?wdycf=www.t-online.de">T-Online</a></li>
 <li><a href="https://telegram.me/share/url?url=https%3A%2F%2Fwww.gesundheitlicheaufklaerung.de%2Ftdb_templates%2Fsingle-post-template-54-fitness-pro-2%2F&text=Single%20Post%20Template%2054%20%E2%80%93%20Fitness%20PRO%20edit">Telegram</a></li>
@@ -49,5 +54,6 @@
 <li><a href="https://ingram-braun.net/">Ingram Braun</a></li>
 <li><a href="https://twitter.com/Bodenseeperlen/status/1582665413325824001">Twitter Status</a></li>
 <li><a href="https://www.facebook.com/jost.auler/">Facebook Profile</a></li>
+<li><a href="https://askubuntu.com/questions/1437613/tplink-tlwn722n-wifi-adaptor-not-working-after-upgrade-22-10">Ask Ubuntu</a>
 </ol>
 </body></html>
