--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -8,6 +8,7 @@
 <li><a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fdubisthalle.de%2Fburger-king-sagt-vorwuerfe-von-team-wallraff-gegen-restaurant-in-halle-neustadt-nicht-bestaetigt&linkname=Burger%20King%20sagt%3A%20Vorw%C3%BCrfe%20von%20%E2%80%9CTeam%20Wallraff%E2%80%9D%20gegen%20Restaurant%20in%20Halle-Neustadt%20nicht%20best%C3%A4tigt">Add to any</a></li>
 <li><a href="https://askubuntu.com/users/login?ssrc=head&returnurl=https%3a%2f%2faskubuntu.com%2f">Ask Ubuntu</a></li>
 <li><a href="https://www.blogger.com/share-post.g?blogID=9054331497123611371&postID=6264829513138037009&target=email">Blogger</a></li>
+<li><a href="https://visitor.constantcontact.com/manage/optin/ea?v=001f1SaSxuJ1zU7DZ6MwLxBlqTHBOsGIyIgfvWWID-LzLKWzjgZPZ-XebPbisvXVzDwdjHc4Cm9Oh424OIDlQWOaPwzzMcp5GbY">ConstantContact</a></li>
 <li><a href="https://www.facebook.com/share.php?u=https%3A%2F%2Fwww.n-tv.de%2F23637423">Facebook</a></li>
 <li><a href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.behoerden-spiegel.de%2F2022%2F10%2F12%2Fsachstand-ersatz-heeresflugabwehr%2F">Facebook</a></li>
 <li><a href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.t-online.de%2Funterhaltung%2Fstars%2Fid_100066042%2Fralf-wolter-karl-may-star-ist-mit-95-jahren-gestorben.html">Facebook</a></li>
