--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -5,6 +5,7 @@
 <h2>Blacklist</h2>
 <!-- <li><a href=""></a></li> -->
 <ol>
+<li><a href="https://www.addthis.com/bookmark.php?v=250&username=ihbc">AddThis</a></li>
 <li><a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fdubisthalle.de%2Fburger-king-sagt-vorwuerfe-von-team-wallraff-gegen-restaurant-in-halle-neustadt-nicht-bestaetigt&linkname=Burger%20King%20sagt%3A%20Vorw%C3%BCrfe%20von%20%E2%80%9CTeam%20Wallraff%E2%80%9D%20gegen%20Restaurant%20in%20Halle-Neustadt%20nicht%20best%C3%A4tigt">Add to any</a></li>
 <li><a href="https://askubuntu.com/users/login?ssrc=head&returnurl=https%3a%2f%2faskubuntu.com%2f">Ask Ubuntu</a></li>
 <li><a href="https://www.blogger.com/share-post.g?blogID=9054331497123611371&postID=6264829513138037009&target=email">Blogger</a></li>
