--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -11,6 +11,7 @@
 <li><a href="https://www.blogger.com/share-post.g?blogID=9054331497123611371&postID=6264829513138037009&target=email">Blogger</a></li>
 <li><a href="https://draft.blogger.com/post-edit.g?blogID=5868481&postID=5755826437321848544&from=pencil">Blogger</a></li>
 <li><a href="https://visitor.constantcontact.com/manage/optin/ea?v=001f1SaSxuJ1zU7DZ6MwLxBlqTHBOsGIyIgfvWWID-LzLKWzjgZPZ-XebPbisvXVzDwdjHc4Cm9Oh424OIDlQWOaPwzzMcp5GbY">ConstantContact</a></li>
+<li><a href="https://gruppenkonto.spiegel.de/authenticate?requestAccessToken=true&targetUrl=https%3A%2F%2Fwww.spiegel.de%2Fwissenschaft%2Fmensch%2Fsponsianus-goldmuenze-liefert-hinweise-auf-mysterioesen-herrscher-a-99af4981-e623-41ed-be84-93530c7b6c00%23kommentare">DER SPIEGEL</a></li>
 <li><a href="https://www.facebook.com/share.php?u=https%3A%2F%2Fwww.n-tv.de%2F23637423">Facebook</a></li>
 <li><a href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.behoerden-spiegel.de%2F2022%2F10%2F12%2Fsachstand-ersatz-heeresflugabwehr%2F">Facebook</a></li>
 <li><a href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.t-online.de%2Funterhaltung%2Fstars%2Fid_100066042%2Fralf-wolter-karl-may-star-ist-mit-95-jahren-gestorben.html">Facebook</a></li>
