--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -6,11 +6,13 @@
 <!-- <li><a href=""></a></li> -->
 <ol>
 <li><a href="https://www.addthis.com/bookmark.php?v=250&username=ihbc">AddThis</a></li>
+<li><a href="https://v1.addthis.com/live/redirect/?url=mailto%3A%3Fbody%3Dhttps%253A%252F%252Fwww.science.org%252Fdoi%252F10.1126%252Fsciadv.aaw3950%2523.Y4cp414YiO8.mailto%26subject%3DMorphology%2520of%2520the%2520Denisovan%2520phalanx%2520closer%2520to%2520modern%2520humans%2520than%2520to%2520Neanderthals&uid=638729e34f45a1d2&pub=ra-56f2f91059d6f875&rev=v8.28.8-wp&per=undefined&pco=tbx-300">AddThis</a></li>
 <li><a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fdubisthalle.de%2Fburger-king-sagt-vorwuerfe-von-team-wallraff-gegen-restaurant-in-halle-neustadt-nicht-bestaetigt&linkname=Burger%20King%20sagt%3A%20Vorw%C3%BCrfe%20von%20%E2%80%9CTeam%20Wallraff%E2%80%9D%20gegen%20Restaurant%20in%20Halle-Neustadt%20nicht%20best%C3%A4tigt">Add to any</a></li>
 <li><a href="https://askubuntu.com/users/login?ssrc=head&returnurl=https%3a%2f%2faskubuntu.com%2f">Ask Ubuntu</a></li>
 <li><a href="https://www.blogger.com/share-post.g?blogID=9054331497123611371&postID=6264829513138037009&target=email">Blogger</a></li>
 <li><a href="https://draft.blogger.com/post-edit.g?blogID=5868481&postID=5755826437321848544&from=pencil">Blogger</a></li>
 <li><a href="https://visitor.constantcontact.com/manage/optin/ea?v=001f1SaSxuJ1zU7DZ6MwLxBlqTHBOsGIyIgfvWWID-LzLKWzjgZPZ-XebPbisvXVzDwdjHc4Cm9Oh424OIDlQWOaPwzzMcp5GbY">ConstantContact</a></li>
+<li><a href="https://delicious.com/save?v=5&noui&jump=close&url=https%3A%2F%2Fwww.openculture.com%2F2022%2F01%2Farchaeologists-discover-a-2000-year-old-roman-glass-bowl-in-pristine-condition.html&title=Archaeologists+Discover+a+2%2C000-Year-Old+Roman+Glass+Bowl+in+Perfect+Condition">Delicious</a></li>
 <li><a href="https://gruppenkonto.spiegel.de/authenticate?requestAccessToken=true&targetUrl=https%3A%2F%2Fwww.spiegel.de%2Fwissenschaft%2Fmensch%2Fsponsianus-goldmuenze-liefert-hinweise-auf-mysterioesen-herrscher-a-99af4981-e623-41ed-be84-93530c7b6c00%23kommentare">DER SPIEGEL</a></li>
 <li><a href="https://www.facebook.com/share.php?u=https%3A%2F%2Fwww.n-tv.de%2F23637423">Facebook</a></li>
 <li><a href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.behoerden-spiegel.de%2F2022%2F10%2F12%2Fsachstand-ersatz-heeresflugabwehr%2F">Facebook</a></li>
