--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -62,6 +62,7 @@
 <li><a href="http://twitter.com/share?text=People+With+Neanderthal+Genes+Process+Medicine+Differently%2C+Study+Finds">Twitter</a></li>
 <li><a href="https://www.twitter.com/share?url=undefined&text=Politi%20efter%20anmeldelser%20af%20dyrevelf%C3%A6rd%20p%C3%A5%20Bornholm%3A%20Bisonerne%20har%20det%20fint">Twitter</a></li>
 <li><a href="http://vk.com/share.php?url=https%3A%2F%2Fhauenstein.de%2Fort%2Fkarmelitinnenkloster-st-josef%2F&title=Karmelitinnenkloster+St.+Josef">VK</a></li>
+<li><a href="http://vkontakte.ru/share.php?url=https://renereiling.com/video/garo-mio-ben/">VK</a></li>
 <li><a href="https://web.whatsapp.com/send?text=POL-KS%3A%20Wohnmobil%20in%20Habichtswalder%20Stra%C3%9Fe%20in%20Kassel%20gestohlen%3A%20Kripo%20sucht%20Zeugen%0A%0Ahttps%3A%2F%2Fwww.presseportal.de%2Fblaulicht%2Fpm%2F44143%2F5344529%2F%3Futm_source%3Dwhatsapp%26utm_medium%3Dsocial">WhatsApp</a></li>
 <li><a href="https://api.whatsapp.com/send?text=%E2%80%9EHabe%20vermutet%2C%20da%20ist%20mehr%20im%20Spiel%E2%80%9C%3A%20Koch-Mehrin%20%C3%BCber%20Sexismus-Vorfall%20mit%20Kubicki%20https%3A%2F%2Fwww.tagesspiegel.de%2Fpolitik%2Fhabe-vermutet-da-ist-mehr-im-spiel-koch-mehrin-aussert-sich-zu-sexismus-vorfall-mit-kubicki-8747830.html&utm_source=tagesspiegel&utm_medium=whatsapp&utm_campaign=share&utm_content=8747830">WhatsApp</a></li>
 <li><a href="https://wa.me/?text=https%3A%2F%2Fwww.agenciasinc.es%2FNoticias%2FLos-senos-frontales-del-craneo-de-los-primates-podrian-ayudar-a-distinguir-especies">WhatsApp</a></li>
