--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -13,6 +13,7 @@
 <li><a href="https://draft.blogger.com/post-edit.g?blogID=5868481&postID=5755826437321848544&from=pencil">Blogger</a></li>
 <li><a href="https://visitor.constantcontact.com/manage/optin/ea?v=001f1SaSxuJ1zU7DZ6MwLxBlqTHBOsGIyIgfvWWID-LzLKWzjgZPZ-XebPbisvXVzDwdjHc4Cm9Oh424OIDlQWOaPwzzMcp5GbY">ConstantContact</a></li>
 <li><a href="https://delicious.com/save?v=5&noui&jump=close&url=https%3A%2F%2Fwww.openculture.com%2F2022%2F01%2Farchaeologists-discover-a-2000-year-old-roman-glass-bowl-in-pristine-condition.html&title=Archaeologists+Discover+a+2%2C000-Year-Old+Roman+Glass+Bowl+in+Perfect+Condition">Delicious</a></li>
+<li><a href="http://del.icio.us/post?url=http://verlag-weisse-reihe.de/?p=175&title=Neuigkeiten">Delicious</a></li>
 <li><a href="https://gruppenkonto.spiegel.de/authenticate?requestAccessToken=true&targetUrl=https%3A%2F%2Fwww.spiegel.de%2Fwissenschaft%2Fmensch%2Fsponsianus-goldmuenze-liefert-hinweise-auf-mysterioesen-herrscher-a-99af4981-e623-41ed-be84-93530c7b6c00%23kommentare">DER SPIEGEL</a></li>
 <li><a href="https://www.facebook.com/share.php?u=https%3A%2F%2Fwww.n-tv.de%2F23637423">Facebook</a></li>
 <li><a href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.behoerden-spiegel.de%2F2022%2F10%2F12%2Fsachstand-ersatz-heeresflugabwehr%2F">Facebook</a></li>
