test pages' encoding

--- a/alert_test.htm
+++ b/alert_test.htm
@@ -1,7 +1,8 @@
 <!DOCTYPE html><html><head>
+<meta charset="UTF-8">
 <title>archive.pl JS alert() test</title>
 </head><body>
 <script>alert('Hello World!');</script>
-<a href="https://uni-goettingen.de/"></a><br>
-<a href="https://uni-tuebingen.de"></a>
+<a href="https://uni-goettingen.de/">G&ouml;ttingen University</a><br>
+<a href="https://uni-tuebingen.de">T&uuml;bingen University</a>
 </body></html>
