--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><head>
+<meta charset="UTF-8">
 <title>archive.pl blacklist test</title>
 <style>a{text-decoration:none;color:blue}a::after{content: " " attr(href);font-family:monospace;color:black}</style>
 </head><body>
