--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -75,6 +75,7 @@
 <li><a href="https://twitter.com/share?url=https%3A%2F%2Fwww.t-online.de%2Ffinanzen%2Fboerse%2Fticker%2Fpro-bahn-49-euro-ticket-schwerlich-sozial-und-oekologisch%2F0DAA9C0073DD4ABE%2F&text=Ich+habe+einen+spannenden+Artikel+gefunden.&via=tonline">Twitter</a></li>
 <li><a href="http://twitter.com/share?text=People+With+Neanderthal+Genes+Process+Medicine+Differently%2C+Study+Finds">Twitter</a></li>
 <li><a href="https://www.twitter.com/share?url=undefined&text=Politi%20efter%20anmeldelser%20af%20dyrevelf%C3%A6rd%20p%C3%A5%20Bornholm%3A%20Bisonerne%20har%20det%20fint">Twitter</a></li>
+<li><a href="https://twitter.com/intent/tweet/?text=Professur%20f%C3%BCr%20Baukultur%20(m/w/d),%20Linz&url=https%3A%2F%2Farthist.net%2Farchive%2F38825">Twitter</a></li>
 <li><a href="http://vk.com/share.php?url=https%3A%2F%2Fhauenstein.de%2Fort%2Fkarmelitinnenkloster-st-josef%2F&title=Karmelitinnenkloster+St.+Josef">VK</a></li>
 <li><a href="http://vkontakte.ru/share.php?url=https://renereiling.com/video/garo-mio-ben/">VK</a></li>
 <li><a href="https://web.whatsapp.com/send?text=POL-KS%3A%20Wohnmobil%20in%20Habichtswalder%20Stra%C3%9Fe%20in%20Kassel%20gestohlen%3A%20Kripo%20sucht%20Zeugen%0A%0Ahttps%3A%2F%2Fwww.presseportal.de%2Fblaulicht%2Fpm%2F44143%2F5344529%2F%3Futm_source%3Dwhatsapp%26utm_medium%3Dsocial">WhatsApp</a></li>
