--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -33,6 +33,7 @@
 <li><a href="https://plus.google.com/share?url=https%3A%2F%2Ficac.cat%2Fes%2Factualitat%2Fnoticies%2F2022%2Finvestigo2022%2F">Google Plus</a></li>
 <li><a href="https://www.googletagmanager.com/ns.html?id=GTM-5G9JF7Z">Google Tag Manager</a></li>
 <li><a href="https://www.instagram.com/p/Bw4X_ool1a7/">Instagram</a></li>
+<li><a href="https://www.instagram.com/invites/contact/?i=17ljz74wg8xdi&utm_content=10usnev">Instagram</a></li>
 <li><a href="https://a.jimdo.com/app/auth/signin/jumpcms/?page=1038097951">Jimdo</a></li>
 <li><a href="https://cms.e.jimdo.com/app/cms/logout.php">Jimdo</a></li>
 <li><a href="https://ko-yu.jimdofree.com/login">Jimdo</a></li>
