--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -75,6 +75,7 @@
 <li><a href="https://twitter.com/intent/tweet?text=I%E2%80%99m%20not%20sure%20about%20the%20morality%0A1.%20-5%C3%82%C2%B0C%20won%E2%80%99t%20seem%20co...%20&url=https%3A%2F%2Fmilitaryland.net%2Fnews%2Fukrainian-winter-is-coming%2F%23comment-5777">Twitter</a></li>
 <li><a href="https://twitter.com/intent/retweet?tweet_id=1629022115692261377">Twitter</a></li>
 <li><a href="https://twitter.com/intent/tweet?in_reply_to=1629379201303212033">Twitter</a></li>
+<li><a href="http://twitter.com/home?status=Arriba%20a%20Calafell%20la%20IX%20edici%C3%83%C2%B3%20de%20la%20Reuni%C3%83%C2%B3%20Internacional%20d%E2%80%99Arqueologia+https%3A%2F%2Ficac.cat%2Factualitat%2Fnoticies%2F2023%2Fix-reunio-arqueologia-calafell%2F">Twitter</a></li>
 <li><a href="https://twitter.com/share?url=https%3A%2F%2Fwww.t-online.de%2Ffinanzen%2Fboerse%2Fticker%2Fpro-bahn-49-euro-ticket-schwerlich-sozial-und-oekologisch%2F0DAA9C0073DD4ABE%2F&text=Ich+habe+einen+spannenden+Artikel+gefunden.&via=tonline">Twitter</a></li>
 <li><a href="https://twitter.com/share?url=https%3A%2F%2Fwww.t-online.de%2Ffinanzen%2Fboerse%2Fticker%2Fpro-bahn-49-euro-ticket-schwerlich-sozial-und-oekologisch%2F0DAA9C0073DD4ABE%2F&text=Ich+habe+einen+spannenden+Artikel+gefunden.&via=tonline">Twitter</a></li>
 <li><a href="http://twitter.com/share?text=People+With+Neanderthal+Genes+Process+Medicine+Differently%2C+Study+Finds">Twitter</a></li>
