blacklist extended (Tumblr)

--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -72,6 +72,7 @@
 <li><a href="https://t.me/share/url?url=https%3A%2F%2Fiapetus2.ac.uk%2Fstudentships%2Ftemporal-ecology-in-the-anthropocene%2F">Telegram</a></li>
 <li><a href="http://www.tumblr.com/share?v=3&u=https%3A%2F%2Fhauenstein.de%2Fort%2Fkarmelitinnenkloster-st-josef%2F&t=Karmelitinnenkloster+St.+Josef">Tumblr</a></li>
 <li><a href="https://www.tumblr.com/share/link?url=https%3A%2F%2Frommyarndt.de%2F03-02-2012-solarfeuerwerk-in-ottobrunn%2F&name=03.02.2012%20Solarfeuerwerk%20in%20Ottobrunn&description=Unter%20dem%20Titel%20%E2%80%9ESolarfeuerwerk%E2%80%9C%20habe%20ich%20am%203.%20Februar%202012%20in%20M%C3%BCnchen-Ottobrunn%20eine%20Veranstaltung%20der%20ASTRIUM%20GmbH%20Deutschland%20moderiert.%20In%20Anwesenheit%20des%20bayrischen%20Wirtschaftsministers%20Martin%20Zeil%20wurde%20die%20Produktion%20des%20300.%20ASTRIUM-Solargenerators%20und%20ein%20Kooperationsabkommen%20zwischen%20ASTRIUM%20und%20der%20AZUR%20Space%20GmbH%20gefeiert.">Tumblr</a></li>
+<li><a href="https://tumblr.com/widgets/share/tool?canonicalUrl=https%3A%2F%2Fwww.html-seminar.de%2Fmod_rewrite-urls-umwandeln.htm">Tumblr</a></li>
 <li><a href="https://twitter.com/intent/tweet?text=I%E2%80%99m%20not%20sure%20about%20the%20morality%0A1.%20-5%C3%82%C2%B0C%20won%E2%80%99t%20seem%20co...%20&url=https%3A%2F%2Fmilitaryland.net%2Fnews%2Fukrainian-winter-is-coming%2F%23comment-5777">Twitter</a></li>
 <li><a href="https://twitter.com/intent/retweet?tweet_id=1629022115692261377">Twitter</a></li>
 <li><a href="https://twitter.com/intent/tweet?in_reply_to=1629379201303212033">Twitter</a></li>
