--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -12,6 +12,7 @@
 <li><a href="https://askubuntu.com/users/login?ssrc=head&returnurl=https%3a%2f%2faskubuntu.com%2f">Ask Ubuntu</a></li>
 <li><a href="https://www.blogger.com/share-post.g?blogID=9054331497123611371&postID=6264829513138037009&target=email">Blogger</a></li>
 <li><a href="https://draft.blogger.com/post-edit.g?blogID=5868481&postID=5755826437321848544&from=pencil">Blogger</a></li>
+<li><a href="https://www.cell.com/action/showLogin?redirectUri=https%3A%2F%2Fwww.cell.com%2Fcell-genomics%2Ffulltext%2FS2666-979X(23)00174-X&pii=S2666-979X(23)00174-X">Cell Press</a></li>
 <li><a href="https://visitor.constantcontact.com/manage/optin/ea?v=001f1SaSxuJ1zU7DZ6MwLxBlqTHBOsGIyIgfvWWID-LzLKWzjgZPZ-XebPbisvXVzDwdjHc4Cm9Oh424OIDlQWOaPwzzMcp5GbY">ConstantContact</a></li>
 <li><a href="https://delicious.com/save?v=5&noui&jump=close&url=https%3A%2F%2Fwww.openculture.com%2F2022%2F01%2Farchaeologists-discover-a-2000-year-old-roman-glass-bowl-in-pristine-condition.html&title=Archaeologists+Discover+a+2%2C000-Year-Old+Roman+Glass+Bowl+in+Perfect+Condition">Delicious</a></li>
 <li><a href="http://del.icio.us/post?url=http://verlag-weisse-reihe.de/?p=175&title=Neuigkeiten">Delicious</a></li>
