--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -77,6 +77,7 @@
 <li><a href="https://getpocket.com/save?url=https://www.focus.de/politik/deutschland/wirbel-in-halle-fdp-mann-rief-wegen-querdenker-ehefrau-die-polizei-dann-randaliert-sie-ohne-maske-in-pflegeheim_id_40930319.html">Pocket</a></li>
 <li><a href="https://reddit.com/submit?url=https%3A%2F%2Fcyprus-mail.com%2F2022%2F11%2F16%2Farchaeological-investigations-off-the-coast-of-paphos-completed%2F&title=Archaeological%20investigations%20off%20the%20coast%20of%20Paphos%20completed">Reddit</a></li>
 <li><a href="https://www.reddit.com/submit?url=https://grahamhancock.com/ancient-aliens-or-a-lost-civilization/&title=Ancient%20aliens?%20Or%20a%20lost%20civilization?%20by%20Graham%20Hancock">Reddit</a></li>
+<li><a href="https://www.science.org/action/ssostart?redirectUri=%2Fcontent%2Farticle%2Fancient-native-americans-were-among-world-s-first-coppersmiths">Science</a></li>
 <li><a href="https://serverfault.com/users/login?ssrc=head&returnurl=https%3a%2f%2fserverfault.com%2fquestions%2f1114120%2foracle-19c-database-session-unstable-with-azure-load-balancer">Server Fault</a></li>
 <li><a href="https://chess.stackexchange.com/users/login?ssrc=head&returnurl=https%3a%2f%2fchess.stackexchange.com%2f">Stack Exchange</a></li>
 <li><a href="https://stackoverflow.com/users/signup?ssrc=site_switcher&returnurl=https%3A%2F%2Fstackoverflow.com%2Fquestions%2F30171063%2Fhow-to-generate-a-postgresql-dump-from-a-docker-container">Stack Overflow</a></li>
