--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -8,6 +8,7 @@
 <ol>
 <li><a href="https://www.addthis.com/bookmark.php?v=250&username=ihbc">AddThis</a></li>
 <li><a href="https://v1.addthis.com/live/redirect/?url=mailto%3A%3Fbody%3Dhttps%253A%252F%252Fwww.science.org%252Fdoi%252F10.1126%252Fsciadv.aaw3950%2523.Y4cp414YiO8.mailto%26subject%3DMorphology%2520of%2520the%2520Denisovan%2520phalanx%2520closer%2520to%2520modern%2520humans%2520than%2520to%2520Neanderthals&uid=638729e34f45a1d2&pub=ra-56f2f91059d6f875&rev=v8.28.8-wp&per=undefined&pco=tbx-300">AddThis</a></li>
+<li><a href="https://api.addthis.com/oexchange/0.8/forward/facebook/offer?pubid=ns.html&url=https://www.newscientist.com/article/mg25934570-400-the-naked-neanderthal-review-looking-for-the-real-neanderthals/&title=The%20Naked%20Neanderthal%20review%3A%20Looking%20for%20the%20real%20Neanderthals&description=From%20creating%20cave%20art%20to%20burying%20their%20dead%2C%20how%20we%20see%20Neanderthals%20reveals%20as%20much%20about%20us%20as%20it%20does%20about%20them%2C%20argues%20Ludovic%20Slimak%20in%20a%20fascinating%20new%20book.%20We%20may%20have%20our%20closest%20extinct%20relatives%20all%20wrong%20-%20again">AddThis</a></li>
 <li><a href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fdubisthalle.de%2Fburger-king-sagt-vorwuerfe-von-team-wallraff-gegen-restaurant-in-halle-neustadt-nicht-bestaetigt&linkname=Burger%20King%20sagt%3A%20Vorw%C3%BCrfe%20von%20%E2%80%9CTeam%20Wallraff%E2%80%9D%20gegen%20Restaurant%20in%20Halle-Neustadt%20nicht%20best%C3%A4tigt">Add to any</a></li>
 <li><a href="https://askubuntu.com/users/login?ssrc=head&returnurl=https%3a%2f%2faskubuntu.com%2f">Ask Ubuntu</a></li>
 <li><a href="https://www.blogger.com/share-post.g?blogID=9054331497123611371&postID=6264829513138037009&target=email">Blogger</a></li>
@@ -78,6 +79,8 @@
 <li><a href="https://reddit.com/submit?url=https%3A%2F%2Fcyprus-mail.com%2F2022%2F11%2F16%2Farchaeological-investigations-off-the-coast-of-paphos-completed%2F&title=Archaeological%20investigations%20off%20the%20coast%20of%20Paphos%20completed">Reddit</a></li>
 <li><a href="https://www.reddit.com/submit?url=https://grahamhancock.com/ancient-aliens-or-a-lost-civilization/&title=Ancient%20aliens?%20Or%20a%20lost%20civilization?%20by%20Graham%20Hancock">Reddit</a></li>
 <li><a href="https://www.science.org/action/ssostart?redirectUri=%2Fcontent%2Farticle%2Fancient-native-americans-were-among-world-s-first-coppersmiths">Science</a></li>
+
+<li><a href="https://web.skype.com/share?url=https%3A%2F%2Fmorpolit.ru%2Fsvetlaya-pamyat-geroyu%2F&text=%D0%A1%D0%B2%D0%B5%D1%82%D0%BB%D0%B0%D1%8F%20%D0%BF%D0%B0%D0%BC%D1%8F%D1%82%D1%8C%20%D0%93%D0%B5%D1%80%D0%BE%D1%8E!">Skype</a></li>
 <li><a href="https://serverfault.com/users/login?ssrc=head&returnurl=https%3a%2f%2fserverfault.com%2fquestions%2f1114120%2foracle-19c-database-session-unstable-with-azure-load-balancer">Server Fault</a></li>
 <li><a href="https://chess.stackexchange.com/users/login?ssrc=head&returnurl=https%3a%2f%2fchess.stackexchange.com%2f">Stack Exchange</a></li>
 <li><a href="https://stackoverflow.com/users/signup?ssrc=site_switcher&returnurl=https%3A%2F%2Fstackoverflow.com%2Fquestions%2F30171063%2Fhow-to-generate-a-postgresql-dump-from-a-docker-container">Stack Overflow</a></li>
