blacklist (Ionos, Weibo)

--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -4,7 +4,7 @@
 <style>a{text-decoration:none;color:blue}a::after{content: " " attr(href);font-family:monospace;color:black}</style>
 </head><body>
 <h2>Blacklist</h2>
-<!-- <li><a href="">Google</a></li> -->
+<!-- <li><a href="">TO DO</a></li> -->
 <ol>
 <li><a href="https://www.addthis.com/bookmark.php?v=250&username=ihbc">AddThis</a></li>
 <li><a href="https://v1.addthis.com/live/redirect/?url=mailto%3A%3Fbody%3Dhttps%253A%252F%252Fwww.science.org%252Fdoi%252F10.1126%252Fsciadv.aaw3950%2523.Y4cp414YiO8.mailto%26subject%3DMorphology%2520of%2520the%2520Denisovan%2520phalanx%2520closer%2520to%2520modern%2520humans%2520than%2520to%2520Neanderthals&uid=638729e34f45a1d2&pub=ra-56f2f91059d6f875&rev=v8.28.8-wp&per=undefined&pco=tbx-300">AddThis</a></li>
@@ -49,6 +49,8 @@
 <li><a href="https://www.googletagmanager.com/ns.html?id=GTM-5G9JF7Z">Google Tag Manager</a></li>
 <li><a href="https://www.instagram.com/p/Bw4X_ool1a7/">Instagram</a></li>
 <li><a href="https://www.instagram.com/invites/contact/?i=17ljz74wg8xdi&utm_content=10usnev">Instagram</a></li>
+<li><a href="https://login.1and1-editor.com/363142462/www.rolf-speckner.de/de?pageId=253987">Ionos</a></li>
+<li><a href="https://login.ionos.de/?redirect_url=https%3A%2F%2Fmein.ionos.de%2Fmywebsite-overview%3Fmywebsite.pageid%3D253987&username=www.rolf-speckner.de">Ionos</a></li>
 <li><a href="https://a.jimdo.com/app/auth/signin/jumpcms/?page=1038097951">Jimdo</a></li>
 <li><a href="https://cms.e.jimdo.com/app/cms/logout.php">Jimdo</a></li>
 <li><a href="https://ko-yu.jimdofree.com/login">Jimdo</a></li>
@@ -110,6 +112,7 @@
 <li><a href="https://www.twitter.com/share?url=undefined&text=Politi%20efter%20anmeldelser%20af%20dyrevelf%C3%A6rd%20p%C3%A5%20Bornholm%3A%20Bisonerne%20har%20det%20fint">Twitter</a></li>
 <li><a href="https://twitter.com/intent/tweet/?text=Professur%20f%C3%BCr%20Baukultur%20(m/w/d),%20Linz&url=https%3A%2F%2Farthist.net%2Farchive%2F38825">Twitter</a></li>
 <li><a href="http://vk.com/share.php?url=https%3A%2F%2Fhauenstein.de%2Fort%2Fkarmelitinnenkloster-st-josef%2F&title=Karmelitinnenkloster+St.+Josef">VK</a></li>
+<li><a href="http://service.weibo.com/share/share.php?url=https%3A%2F%2Fcritical-news.de%2F&title=Home">Weibo</a></li>
 <li><a href="http://vkontakte.ru/share.php?url=https://renereiling.com/video/garo-mio-ben/">VK</a></li>
 <li><a href="https://web.whatsapp.com/send?text=POL-KS%3A%20Wohnmobil%20in%20Habichtswalder%20Stra%C3%9Fe%20in%20Kassel%20gestohlen%3A%20Kripo%20sucht%20Zeugen%0A%0Ahttps%3A%2F%2Fwww.presseportal.de%2Fblaulicht%2Fpm%2F44143%2F5344529%2F%3Futm_source%3Dwhatsapp%26utm_medium%3Dsocial">WhatsApp</a></li>
 <li><a href="https://api.whatsapp.com/send?text=%E2%80%9EHabe%20vermutet%2C%20da%20ist%20mehr%20im%20Spiel%E2%80%9C%3A%20Koch-Mehrin%20%C3%BCber%20Sexismus-Vorfall%20mit%20Kubicki%20https%3A%2F%2Fwww.tagesspiegel.de%2Fpolitik%2Fhabe-vermutet-da-ist-mehr-im-spiel-koch-mehrin-aussert-sich-zu-sexismus-vorfall-mit-kubicki-8747830.html&utm_source=tagesspiegel&utm_medium=whatsapp&utm_campaign=share&utm_content=8747830">WhatsApp</a></li>
