--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -4,7 +4,7 @@
 <style>a{text-decoration:none;color:blue}a::after{content: " " attr(href);font-family:monospace;color:black}</style>
 </head><body>
 <h2>Blacklist</h2>
-<!-- <li><a href="">TO DO</a></li> -->
+<!-- <li><a href="">To Do</a></li> -->
 <ol>
 <li><a href="https://www.addthis.com/bookmark.php?v=250&username=ihbc">AddThis</a></li>
 <li><a href="https://v1.addthis.com/live/redirect/?url=mailto%3A%3Fbody%3Dhttps%253A%252F%252Fwww.science.org%252Fdoi%252F10.1126%252Fsciadv.aaw3950%2523.Y4cp414YiO8.mailto%26subject%3DMorphology%2520of%2520the%2520Denisovan%2520phalanx%2520closer%2520to%2520modern%2520humans%2520than%2520to%2520Neanderthals&uid=638729e34f45a1d2&pub=ra-56f2f91059d6f875&rev=v8.28.8-wp&per=undefined&pco=tbx-300">AddThis</a></li>
@@ -20,6 +20,7 @@
 <li><a href="https://delicious.com/save?v=5&noui&jump=close&url=https%3A%2F%2Fwww.openculture.com%2F2022%2F01%2Farchaeologists-discover-a-2000-year-old-roman-glass-bowl-in-pristine-condition.html&title=Archaeologists+Discover+a+2%2C000-Year-Old+Roman+Glass+Bowl+in+Perfect+Condition">Delicious</a></li>
 <li><a href="http://del.icio.us/post?url=http://verlag-weisse-reihe.de/?p=175&title=Neuigkeiten">Delicious</a></li>
 <li><a href="http://delicious.com/post?url=http%3A%2F%2Fwww.botschaftisrael.de%2F2012%2F04%2F05%2Fstellungnahme-von-netanyahu-zu-grass%2F&title=Stellungnahme%20von%20Netanyahu%20zu%20Grass&notes=%26nbsp%3B%0D%0A%0D%0AMinisterpr%C3%A4sident%20Binyamin%20Netanyahu%20erkl%C3%A4rte%20heute%20zur%20Ver%C3%B6ffentlichung%20von%20G%C3%BCnter%20Grass%3A%0D%0A%0D%0A%26nbsp%3B%0D%0A%0D%0A%0D%0A%0D%0A%22Der%20peinliche%20Vergleich%2C%20den%20G%C3%BCnter%20Grass%20zwischen%20Israel%20und%20dem%20Iran%20gezogen%20hat%2C%20einem%20Regime%2C%20das%20die%20Shoah%20leugnet%20und%20zu">Delicious</a></li>
+<li><a href="https://share.diasporafoundation.org/?url=https%3A%2F%2Fcritical-news.de%2F&title=Home">Diaspora</a></li>
 <li><a href="http://www.digg.com/submit?phase=2&url=http://verlag-weisse-reihe.de/?p=175&title=Neuigkeiten">Digg</a></li>
 <li><a href="http://digg.com/submit?url=https%3A%2F%2Fwww.kunst-im-tunnel.de%2Fpublikationen%2FKIT_Dunkelheit_2012%2F&title=RZ_KIT_Drittel_Weiss_Katalog_Innen_RZ.indd%2520">Digg</a></li>
 <li><a href="https://gruppenkonto.spiegel.de/authenticate?requestAccessToken=true&targetUrl=https%3A%2F%2Fwww.spiegel.de%2Fwissenschaft%2Fmensch%2Fsponsianus-goldmuenze-liefert-hinweise-auf-mysterioesen-herrscher-a-99af4981-e623-41ed-be84-93530c7b6c00%23kommentare">DER SPIEGEL</a></li>
