--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -90,6 +90,7 @@
 <li><a href="https://www.science.org/action/ssostart?redirectUri=%2Fcontent%2Farticle%2Fancient-native-americans-were-among-world-s-first-coppersmiths">Science</a></li>
 
 <li><a href="https://web.skype.com/share?url=https%3A%2F%2Fmorpolit.ru%2Fsvetlaya-pamyat-geroyu%2F&text=%D0%A1%D0%B2%D0%B5%D1%82%D0%BB%D0%B0%D1%8F%20%D0%BF%D0%B0%D0%BC%D1%8F%D1%82%D1%8C%20%D0%93%D0%B5%D1%80%D0%BE%D1%8E!">Skype</a></li>
+<li><a href="https://www.snapchat.com/add/brown-u">Snapchat</a></li>
 <li><a href="https://serverfault.com/users/login?ssrc=head&returnurl=https%3a%2f%2fserverfault.com%2fquestions%2f1114120%2foracle-19c-database-session-unstable-with-azure-load-balancer">Server Fault</a></li>
 <li><a href="https://chess.stackexchange.com/users/login?ssrc=head&returnurl=https%3a%2f%2fchess.stackexchange.com%2f">Stack Exchange</a></li>
 <li><a href="https://stackoverflow.com/users/signup?ssrc=site_switcher&returnurl=https%3A%2F%2Fstackoverflow.com%2Fquestions%2F30171063%2Fhow-to-generate-a-postgresql-dump-from-a-docker-container">Stack Overflow</a></li>
