--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -108,6 +108,7 @@
 <li><a href="http://www.stumbleupon.com/submit?url=https%3A%2F%2Fwww.openculture.com%2F2021%2F01%2Falgerian-cave-paintings-suggest-humans-did-magic-mushrooms-9000-years-ago.html">Stumble Upon</a></li>
 <li><a href="https://accounts.login.idm.telekom.com/oauth2/auth?client_id=10LIVESAM30000004901PORTAL00000000000000&state=747bbb901e5ad0e7e5e4b62a7bb1834cd0a3fd230a8f948287cce11a3ec08a26&claims=%7B%22id_token%22%3A%7B%22urn%3Atelekom.com%3Aall%22%3Anull%7D%7D&nonce=747bbb901e5ad0e7e5e4b62a7bb1834cd0a3fd230a8f948287cce11a3ec08a26&redirect_uri=https%3A%2F%2Flogin.t-online.de%2Fcallback&logout_uri=https%3A%2F%2Flogin.t-online.de%2Ftelekom_logout&display=popup&scope=openid&response_type=code">Telekom</a></li>
 <li><a href="https://login.t-online.de/?returnToUrl=https://email.t-online.de?wdycf=www.t-online.de">T-Online</a></li>
+<li><a href="http://technorati.com/faves?sub=addfavbtn&add=https://khalas.wordpress.com">Technorati</a></li>
 <li><a href="https://telegram.me/share/url?url=https%3A%2F%2Fwww.gesundheitlicheaufklaerung.de%2Ftdb_templates%2Fsingle-post-template-54-fitness-pro-2%2F&text=Single%20Post%20Template%2054%20%E2%80%93%20Fitness%20PRO%20edit">Telegram</a></li>
 <li><a href="https://t.me/share/url?url=https%3A%2F%2Fiapetus2.ac.uk%2Fstudentships%2Ftemporal-ecology-in-the-anthropocene%2F">Telegram</a></li>
 <li><a href="http://www.tumblr.com/share?v=3&u=https%3A%2F%2Fhauenstein.de%2Fort%2Fkarmelitinnenkloster-st-josef%2F&t=Karmelitinnenkloster+St.+Josef">Tumblr</a></li>
