blacklist Virtual Minds

--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -122,6 +122,7 @@
 <li><a href="http://twitter.com/share?text=People+With+Neanderthal+Genes+Process+Medicine+Differently%2C+Study+Finds">Twitter</a></li>
 <li><a href="https://www.twitter.com/share?url=undefined&text=Politi%20efter%20anmeldelser%20af%20dyrevelf%C3%A6rd%20p%C3%A5%20Bornholm%3A%20Bisonerne%20har%20det%20fint">Twitter</a></li>
 <li><a href="https://twitter.com/intent/tweet/?text=Professur%20f%C3%BCr%20Baukultur%20(m/w/d),%20Linz&url=https%3A%2F%2Farthist.net%2Farchive%2F38825">Twitter</a></li>
+<li><a href="https://ad3.adfarm1.adition.com/redi?bid=10752059&kid=3485249&sid=4117394">Virtual Minds</a></li>
 <li><a href="http://vk.com/share.php?url=https%3A%2F%2Fhauenstein.de%2Fort%2Fkarmelitinnenkloster-st-josef%2F&title=Karmelitinnenkloster+St.+Josef">VK</a></li>
 <li><a href="http://vkontakte.ru/share.php?url=https://renereiling.com/video/garo-mio-ben/">VK</a></li>
 <li><a href="http://service.weibo.com/share/share.php?url=https%3A%2F%2Fcritical-news.de%2F&title=Home">Weibo</a></li>
