improved campaign detection

--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -129,6 +129,7 @@
 <li><a href="http://service.weibo.com/share/share.php?url=https%3A%2F%2Fcritical-news.de%2F&title=Home">Weibo</a></li>
 <li><a href="https://web.whatsapp.com/send?text=POL-KS%3A%20Wohnmobil%20in%20Habichtswalder%20Stra%C3%9Fe%20in%20Kassel%20gestohlen%3A%20Kripo%20sucht%20Zeugen%0A%0Ahttps%3A%2F%2Fwww.presseportal.de%2Fblaulicht%2Fpm%2F44143%2F5344529%2F%3Futm_source%3Dwhatsapp%26utm_medium%3Dsocial">WhatsApp</a></li>
 <li><a href="https://api.whatsapp.com/send?text=%E2%80%9EHabe%20vermutet%2C%20da%20ist%20mehr%20im%20Spiel%E2%80%9C%3A%20Koch-Mehrin%20%C3%BCber%20Sexismus-Vorfall%20mit%20Kubicki%20https%3A%2F%2Fwww.tagesspiegel.de%2Fpolitik%2Fhabe-vermutet-da-ist-mehr-im-spiel-koch-mehrin-aussert-sich-zu-sexismus-vorfall-mit-kubicki-8747830.html&utm_source=tagesspiegel&utm_medium=whatsapp&utm_campaign=share&utm_content=8747830">WhatsApp</a></li>
+<li><a href="https://wa.me/+918800173873">WhatsApp</a></li>
 <li><a href="https://wa.me/?text=https%3A%2F%2Fwww.agenciasinc.es%2FNoticias%2FLos-senos-frontales-del-craneo-de-los-primates-podrian-ayudar-a-distinguir-especies">WhatsApp</a></li>
 <li><a href="https://authorservices.wiley.com/index.html">Wiley</a></li>
 <li><a href="https://faseb.onlinelibrary.wiley.com/action/showLogin?role=button&uri=%2Fdoi%2Ffull%2F10.1096%2Ffj.202300927R">Wiley</a></li>
