-Y takes a soace seoarated list of URIs now

--- a/blacklist_test.htm
+++ b/blacklist_test.htm
@@ -16,6 +16,7 @@
 <li><a href="https://www.blogger.com/comment/frame/116259103207720939?po=9115281429438763274&hl=en">Blogger</a></li>
 <li><a href="https://bsky.app/intent/compose?text=Led%20by%20Tlaib%2C%20Lawmakers%20Demand%20Trump%20Administration%20Protect%20Flotilla%20to%20Gaza%20https%3A%2F%2Ftruthout.org%2Farticles%2Fled-by-tlaib-lawmakers-demand-trump-administration-protect-flotilla-to-gaza%2F%3Futm_campaign%3DTruthout%2BShare%2BButtons">BlueSky</a></li>
 <li><a href="https://www.cell.com/action/showLogin?redirectUri=https%3A%2F%2Fwww.cell.com%2Fcell-genomics%2Ffulltext%2FS2666-979X(23)00174-X&pii=S2666-979X(23)00174-X">Cell Press</a></li>
+<li><a href="https://account.chessbase.com/en">ChessBase</a></li>
 <li><a href="https://visitor.constantcontact.com/manage/optin/ea?v=001f1SaSxuJ1zU7DZ6MwLxBlqTHBOsGIyIgfvWWID-LzLKWzjgZPZ-XebPbisvXVzDwdjHc4Cm9Oh424OIDlQWOaPwzzMcp5GbY">ConstantContact</a></li>
 <li><a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">Creative Commons</a></li>
 <li><a href="https://delicious.com/save?v=5&noui&jump=close&url=https%3A%2F%2Fwww.openculture.com%2F2022%2F01%2Farchaeologists-discover-a-2000-year-old-roman-glass-bowl-in-pristine-condition.html&title=Archaeologists+Discover+a+2%2C000-Year-Old+Roman+Glass+Bowl+in+Perfect+Condition">Delicious</a></li>
